--- a/wishDream_Web/public/styles/app.scss
+++ b/wishDream_Web/public/styles/app.scss
@@ -1,9 +1,11 @@
-@import url("//fonts.googleapis.com/css?family=Do+Hyeon:400");
+@import url('https://fonts.googleapis.com/css?family=Do+Hyeon:400');
+
+$default-font: "Do Hyeon", sans-serif;
 
 body {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Do Hyeon", sans-serif;
+  font-family: $default-font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
