login페이지 폼이랑 분리 formcontrollabel 코어쪽 에러나서 그냥 컴포넌트만들어 사용

--- a/wishDream_Web/public/styles/app.scss
+++ b/wishDream_Web/public/styles/app.scss
@@ -5,6 +5,29 @@ body {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
+
+  .paper {
+    width: 480px;
+    padding-top: 80px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .avatar {
+      margin: 10px;
+      background-color: white;
+    }
+    .login-form {
+      width: 100%;
+      margin-top: 10px;
+    }
+    .submit {
+      margin: 30px 0 20px;
+      height: 50px;
+    }
+  }
 }
 
 * {
